# tree-sitter-hygen-template

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
.changeset/: chatty-badgers-sort.md  config.json  cool-cats-complain.md  cuddly-oranges-clean.md  dull-moose-jam.md  eight-actors-matter.md  eighty-days-smile.md  famous-days-worry.md  few-hats-clap.md  flat-rockets-think.md  flat-zebras-dance.md  healthy-poets-wash.md  hip-pears-hope.md  many-pugs-smash.md  moody-nails-grow.md  proud-birds-swim.md  proud-clocks-play.md  purple-roses-cry.md  quiet-mails-eat.md  rare-wasps-tie.md  real-parrots-develop.md  red-walls-argue.md  rotten-cups-cry.md  rude-garlics-fly.md  shiny-months-run.md  sixty-coats-hammer.md  small-lamps-remember.md  small-pugs-hear.md  soft-bikes-destroy.md  sour-bananas-begin.md  wise-panthers-raise.md  with-links-changelog.cjs  with-updated-github-info.cjs
.github/workflows/: ci.yml  publish.yml  release.yaml
bindings/c/: tree-sitter-hygen-template.h  tree-sitter-hygen-template.pc.in  tree-sitter-hygen_template.h  tree-sitter-hygen_template.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_hygen_template/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHygenTemplateTests/: TreeSitterHygenTemplateTests.swift
neovim/: hygen-directive.lua
queries/: highlights.scm  injections.scm
queries/neovim/: highlights.scm
scripts/: breaking-change-message.md  breaking-change-message.txt  logger.sh  prepare-to-publish.sh  release-major-0.sh  release-manager.sh  release-normal.sh  release-unstable.sh  release.sh  utils.sh
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt  body.txt  frontmatter-metadata.txt  frontmatter.test  frontmatter.txt  no-frontmatter.txt
