[package]
name = "tree-sitter-hygen-template"
description = "Hygen Template grammar for tree-sitter"
version = "0.3.3"
authors = ["Héctor Ochoa <hector.ochoa.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hygen-template"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Hdoc1509/tree-sitter-hygen-template"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "./grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.24.4"

[build-dependencies]
cc = "1.0.87"
